@@ -1,8 +1,10 @@
 (cl:defpackage :vecto-chart
   (:use :cl :vecto :flexi-streams)
-  (:export #:render-png-stream #:add-data #:with-line-chart #:draw-axis))
+  (:export #:render-png-stream #:add-data #:with-line-chart #:draw-axis #:draw-grid))
 
 (in-package :vecto-chart)
+
+(defvar *current-chart* nil)
 
 (defclass chart ()
   ((width :accessor chart-width :initarg :width :initform 400)
@@ -17,7 +19,12 @@
    (max-x :accessor chart-data-max-x :initform 0)
    (max-y :accessor chart-data-max-y :initform 0)
    (ratio-x :accessor chart-ratio-x :initform 1)
-   (ratio-y :accessor chart-ratio-y :initform 1)))
+   (ratio-y :accessor chart-ratio-y :initform 1)
+   (label-x :accessor chart-label-x :initform "t")
+   (label-y :accessor chart-label-y :initform "value")
+   (draw-labels-p :accessor chart-draw-labels-p :initform t)
+   (line-width :accessor chart-line-width :initform 3)
+   (draw-grid-p :initarg :draw-grid :accessor chart-draw-grid-p :initform nil)))
 
 (defclass pie-chart (chart)
   ())
@@ -30,41 +37,96 @@
 	(with-canvas (:width ,width :height ,height)
 	  ,@body)))
 
-(defvar *current-chart* nil)
-
-(defmacro with-line-chart ((&key width height) &body body)
+(defmacro with-line-chart ((&key width height draw-grid) &body body)
   `(let ((*current-chart* (make-instance 'line-chart
 										 :width ,width
 										 :height ,height
-										 :offset (* ,height 0.05))))
+										 :offset (* ,height 0.08)
+										 :draw-grid ,draw-grid)))
 	 (with-canvas (:width ,width :height ,height)
 	   ,@body)))
 
 
+(defun hex->rgb (hex-color)
+  (unless (string= (elt hex-color 0) "#")
+	(error 'wrong-hex-color-format))
+  (when (< (length hex-color) 7)
+	(error 'wrong-hex-color-format))
+  (list 
+   (/ (parse-integer (subseq hex-color 1 3) :radix 16) 255.0)
+   (/ (parse-integer (subseq hex-color 3 5) :radix 16) 255.0)
+   (/ (parse-integer (subseq hex-color 5 7) :radix 16) 255.0)))
+
 
 (defparameter +series-colors+
-  (list '(0.6 0.5 0.9)
-        '(0.3 0.6 0.7)
-        '(0.5 0.3 0.8)
-        '(0.9 0.4 0.3)
-        '(0.4 0.8 0.2)))
+  (list "#edc240" "#afd8f8" "#cb4b4b" "#4da74d" "#9440ed"))
 
 (defun draw-axis ()
   (draw-axis* *current-chart*))
 
+(defun set-labels (labels)
+  (set-labels* *current-chart* labels))
+
+(defmethod set-labels* ((chart line-chart) labels)
+  (with-slots (label-x label-y) chart
+	(setf label-x (car labels))
+	(setf label-y (cdr labels))))
+
 (defmethod draw-axis* ((chart line-chart))
-  (with-slots (width height offset) chart
-    (set-rgb-fill 0.95 0.95 0.95)
+  (with-slots (width height offset draw-labels-p label-x label-y) chart
+
+	;; drawing background
+    (set-rgb-fill 0.97 0.97 0.97)
     (rectangle 0 0 width height)
     (fill-path)
-    (set-line-cap :square)
-	;; (set-line-width 0.35)
+
+	;; drawing axis
+	(set-rgb-fill 0 0 0)
+    (set-line-cap :round)
+	(set-line-width 1)
     (move-to offset offset)
     (line-to offset (- height offset))
     (move-to offset offset)
     (line-to (- width offset) offset)
-    (stroke)))
 
+	;; drawing axis labels
+	(when draw-labels-p
+	  (let ((font (get-font "times.ttf")))
+		(set-rgb-fill 0 0 0)
+		(set-font font 15)
+		(draw-string 3 (- height 15) label-y)
+		(draw-string (- width 15) 3 label-x)))
+	
+	(stroke)))
+
+(defun draw-grid ()
+  (draw-grid* *current-chart*))
+
+(defmethod draw-grid* ((chart line-chart))
+  (with-slots (offset have-x-y min-x min-y max-x max-y data height width) chart
+	  (let ((x-step nil)
+			(y-step nil))
+		(if have-x-y
+			(setf x-step (/ (- max-x min-x) 10.0))
+			(setf x-step 2))
+		(setf y-step (/ (- max-y min-y) 8.0))
+		(with-graphics-state
+		  ;; drawing x-grid
+		  (do ((step 1 (1+ step)))
+			  ((>= step (/ max-x x-step)))
+			(set-line-width 0.4)
+			(set-dash-pattern #(10 10) 5)
+			(move-to (dx->x chart (+ min-x (* step x-step))) offset)
+			(line-to (dx->x chart (+ min-x (* step x-step))) (- height offset)))
+		  ;; drawing y-grid
+		  (do ((step 1 (1+ step)))
+			  ((>= step (/ max-y y-step)))
+			(set-line-width 0.4)
+			(set-dash-pattern #(5 5) 5)
+			(move-to offset (dy->y chart (+ min-y (* step y-step))))
+			(line-to (- width offset) (dy->y chart (+ min-y (* step y-step)))))
+		  
+		  (stroke))))))
 
 (define-condition wrong-argument-structure (condition)
   ())
@@ -107,6 +169,7 @@
 			  `(setf (,(intern (format nil "CHART-DATA-~A-Y" fn)) chart)
 					 (apply #',fn (apply #'append (chart-data chart)))))
 	   (setf (chart-data-min-x chart) 1)
+	   ;; maximum X is max length of data series
 	   (setf (chart-data-max-x chart)
 			 (apply #'max
 					(mapcar #'length (chart-data chart)))))
@@ -160,40 +223,45 @@
 ;;; Main drawing method
 ;;; returns png data stream
 (defmethod render-png-stream* ((chart line-chart))
-  (let ((data (chart-data chart))
-		(have-x-y (chart-have-x-y chart)))
-	;; calculating min-max-values for all data
-	(calculate-min-max chart)
-	;; calculate ratios for given chart
-	(calculate-ratios chart)
+  (with-slots (data have-x-y line-width draw-grid-p) chart
+	(let ((line-offset (/ line-width 2))
+		  (next-color 0))
+	  
+	  ;; calculating min-max-values for all data
+	  (calculate-min-max chart)
+	  ;; calculate ratios for given chart
+	  (calculate-ratios chart)
 
-	;; iterating through data and drawing line
-	(loop for dataset in data do
-		 (if have-x-y
-			 (move-to
-			  (1+ (dx->x chart (caar dataset)))
-			  (1+ (dy->y chart (cadr dataset))))
-			 (move-to
-			  (1+ (dx->x chart 1))
-			  (1+ (dy->y chart (car dataset)))))
-		 (pop dataset)
-		 (apply #'set-rgb-stroke
-				(nth (random (length +series-colors+)) +series-colors+))
-		 (set-line-width 1)
-		 (set-line-join :round)
-		 (set-line-cap :round)
-		 (let ((current-x 2))
+	  (when draw-grid-p
+		(draw-grid))
+	  ;; iterating through data and drawing line
+	  (loop for dataset in data do
 		   (if have-x-y
-			   (loop for item in dataset do
-					(line-to
-					 (dx->x chart (car item))
-					 (dy->y chart (cdr item))))
-			   (loop for item in dataset do
-					(line-to
-					 (dx->x chart current-x)
-					 (dy->y chart item))
+			   (move-to
+				(+ line-offset (dx->x chart (caar dataset)))
+				(+ line-offset (dy->y chart (cadr dataset))))
+			   (move-to
+				(+ line-offset (dx->x chart 1))
+				(+ line-offset (dy->y chart (car dataset)))))
+		   (pop dataset)
+		   (apply #'set-rgb-stroke
+				  (hex->rgb (nth next-color +series-colors+)))
+		   (incf next-color)
+		   (set-line-width line-width)
+		   (set-line-join :round)
+		   (set-line-cap :round)
+		   (let ((current-x 2))
+			 (if have-x-y
+				 (loop for item in dataset do
+					  (line-to
+					   (dx->x chart (car item))
+					   (dy->y chart (cdr item))))
+				 (loop for item in dataset do
+					  (line-to
+					   (dx->x chart current-x)
+					   (dy->y chart item))
 					(incf current-x))))
-		 (stroke))
+		   (stroke)))
 	(flexi-streams:with-output-to-sequence (png-stream)
 	  (save-png-stream png-stream)
 	  png-stream)))
